--- a/src/components/contact/style.css
+++ b/src/components/contact/style.css
@@ -52,3 +52,13 @@ a{
     cursor: pointer;
     background-color: #196deb;
 }
+.email:hover{
+    cursor: pointer;
+}
+
+.contentModalNumber{
+    font-size: 20px;
+}
+#contact{
+    padding: 20px 0;
+}
