--- a/src/components/navBar/style.css
+++ b/src/components/navBar/style.css
@@ -1,8 +1,12 @@
 .navBar{
-    background-color: rgb(2,19,47);
+    background: #0c192c;
+    background-size:750%;
     height: 7vh;
     position: fixed;
     width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
 }
 
 .navBar ul{
@@ -12,7 +16,6 @@
     margin: 0;
     right:0 ;
     justify-content: flex-end;
-    padding-top: 12px;
 }
 .navBar li{
     margin-right: 15px;
@@ -22,7 +25,14 @@
 .navBar li:hover{
     color: rgb(173, 178, 182);
 }
-
+.contain{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    right:0 ;
+    left: 0;
+}
 .navBar a{
     text-decoration: none;
     color: aliceblue;
