--- a/src/components/navBar/style.css
+++ b/src/components/navBar/style.css
@@ -3,6 +3,7 @@
     background-size:750%;
     height: 7vh;
     position: fixed;
+    z-index: 100;
     width: 100%;
     display: flex;
     align-items: center;
@@ -55,17 +56,43 @@
     }
     .menu{
         display: flex;
-        justify-content: end;    
-        padding-left: 20px;
+        /* width: 100vw; */
+        padding-left: 10px;
         font-size: 24px;
+        margin-top: 8px;
+        position: relative;
+        left: 0;
     }
-    .navBar ul {
+    .navBar ul  {
+        z-index: 1;
         display:flex;
+        align-items: flex-start;
         flex-direction: column;
         width: 100%;
     }
     .navBar{
         position: fixed;
+        flex-direction: column;
+        width: 100vw;
+        height: 60px;
+        z-index: 100;
+    }
+    .s{
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        width: 150px;
+        height: 100vh;
+        background-color: #0c192c;
+    }
+    .navBar li{
+        padding: 10px;
+    }
+    .lista {
+        margin-left: -200px;
+    }
+    .active{
+        margin-left: 0;
     }
   }
 
