--- a/src/components/setSkill/styleSkills.css
+++ b/src/components/setSkill/styleSkills.css
@@ -12,6 +12,13 @@
 .set{
     padding-top: 20px;
 }
+@media (max-width: 1200px) {
+  .skills {
+      display:grid;
+      grid-template-columns: auto auto auto;
+      justify-content: space-around;
+  }
+}
 @media (max-width: 600px) {
     .skills {
         display:grid;
