--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -2,6 +2,7 @@
     width: 100vw;
     height: 100vh;
     position: fixed;
+    z-index: 1000;
     top: 0;
     left: 0;
     background-color: rgba(0,0,0, .5);
@@ -50,4 +51,16 @@
 .x{
     width: 100%;
     height: 100%;
+}
+
+
+@media (max-width: 600px) {
+
+    .contentModal{
+        width: 500px;
+        min-height: 100px;
+        max-height:600px ;
+        padding: 20px;
+    }
+
 }
