--- a/src/components/setSkill/styleSkills.css
+++ b/src/components/setSkill/styleSkills.css
@@ -1,6 +1,6 @@
 .skills{
     display:grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto ;
     justify-content: space-around;
 }
 .skills img {
