--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -57,10 +57,13 @@
 @media (max-width: 600px) {
 
     .contentModal{
-        width: 500px;
+        font-size: 13px;
+        min-width: 200px;
+        max-width: 300px;
         min-height: 100px;
-        max-height:600px ;
+        max-height:500px ;
         padding: 20px;
+        color: black;
     }
 
 }
