--- a/src/components/briefcase/style.css
+++ b/src/components/briefcase/style.css
@@ -19,3 +19,18 @@
     margin: 0px;
     padding: 20px;
 }
+
+
+@media (max-width: 600px) {
+    .card{
+        width: 100%;
+        height: 130px;
+        width: 140px;
+        margin-bottom: 40px;
+    }
+    .card img{
+        width: 100%;
+        height: 130px;
+        border-radius: 10px;
+    }
+  }
